--- a/Move Brick/Android/android_studio/app/build.gradle
+++ b/Move Brick/Android/android_studio/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
   id 'com.android.application'
-  id 'com.google.gms.google-services'
 }
 
 android {
@@ -8,7 +7,7 @@ android {
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        applicationId "com.reborn.MoveBrick"
+        applicationId "adfjfnoyjds.wyghefjklfmerdf.cgrrg"
         minSdkVersion 19
         targetSdkVersion 33
         versionCode 2
@@ -30,7 +29,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.13.2'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.gms:play-services-ads:21.3.0'
-    implementation platform('com.google.firebase:firebase-bom:31.1.0')
-    implementation 'com.google.firebase:firebase-analytics'
+
+    implementation 'com.appsflyer:af-android-sdk:6.9.0'
+    implementation "com.android.installreferrer:installreferrer:2.2"
+
+//    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+//    implementation platform('com.google.firebase:firebase-bom:31.1.0')
+//    implementation 'com.google.firebase:firebase-analytics'
 }
