--- a/Move Brick/Android/android_studio/app/build.gradle
+++ b/Move Brick/Android/android_studio/app/build.gradle
@@ -1,38 +1,54 @@
 plugins {
-  id 'com.android.application'
+    alias(libs.plugins.android.application)
 }
 
+
 android {
-    compileSdkVersion 33
-    useLibrary 'org.apache.http.legacy'
+    namespace = "com.reborn.MoveBrick"
+    compileSdk = 34
 
     defaultConfig {
-        applicationId "adfjfnoyjds.wyghefjklfmerdf.cgrrg"
-        minSdkVersion 19
-        targetSdkVersion 33
-        versionCode 2
-        versionName "1.0.1"
+        applicationId = "adfjfnoyjds.wyghefjklfmerdf.cgrrg"
+        minSdk = 24
+        targetSdk = 34
+        versionCode = 1
+        versionName = "1.0"
     }
+
     sourceSets.main{
         jniLibs.srcDir 'libs'
     }
+
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled = true
+            proguardFiles(
+                    getDefaultProguardFile("proguard-android-optimize.txt"),
+                    "proguard-rules.pro"
+            )
         }
     }
-    namespace 'com.reborn.MoveBrick'
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.13.2'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation(libs.appcompat)
+    implementation(libs.material)
+    testImplementation(libs.junit)
 
-    implementation 'com.appsflyer:af-android-sdk:6.9.0'
-    implementation "com.android.installreferrer:installreferrer:2.2"
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    testImplementation libs.junit
+//    implementation 'androidx.appcompat:appcompat:1.7.0'
 
+//    implementation 'com.appsflyer:af-android-sdk:6.9.0'
+//    implementation "com.android.installreferrer:installreferrer:2.2"
 //    implementation 'com.google.android.gms:play-services-ads:21.3.0'
 //    implementation platform('com.google.firebase:firebase-bom:31.1.0')
 //    implementation 'com.google.firebase:firebase-analytics'
