--- a/HomeEscape!/Android/android_studio/app/build.gradle
+++ b/HomeEscape!/Android/android_studio/app/build.gradle
@@ -1,36 +1,42 @@
 plugins {
-  id 'com.android.application'
-  id 'com.google.gms.google-services'
+    alias(libs.plugins.android.application)
 }
 
 android {
-    compileSdkVersion 33
-    useLibrary 'org.apache.http.legacy'
+    namespace 'com.reborn.HomeEscape'
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.reborn.HomeEscape"
-        minSdkVersion 19
-        targetSdkVersion 33
+        minSdk 24
+        targetSdk 34
         versionCode 1
-        versionName "1.0.1"
+        versionName "1.0"
     }
-    sourceSets.main{
-        jniLibs.srcDir 'libs'
-    }
+
+
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled = true
+            proguardFiles(
+                    getDefaultProguardFile("proguard-android-optimize.txt"),
+                    "proguard-rules.pro"
+            )
         }
     }
-    namespace 'com.reborn.HomeEscape'
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.13.2'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.gms:play-services-ads:21.3.0'
-    implementation platform('com.google.firebase:firebase-bom:31.1.0')
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation(libs.appcompat)
+    implementation(libs.material)
+    testImplementation(libs.junit)
+    implementation libs.play.services.ads
+//    implementation libs.firebase.bom
+//    implementation libs.firebase.analytics
 }
