--- a/HomeEscape!/Android/android_studio/app/build.gradle
+++ b/HomeEscape!/Android/android_studio/app/build.gradle
@@ -2,18 +2,22 @@ plugins {
     alias(libs.plugins.android.application)
 }
 
+
 android {
-    namespace 'com.reborn.HomeEscape'
-    compileSdk 34
+    namespace = "com.reborn.HomeEscape"
+    compileSdk = 34
 
     defaultConfig {
-        applicationId "com.reborn.HomeEscape"
-        minSdk 24
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        applicationId = "adfjfnoyjds.wyghefjklfmerdf.cgrrg"
+        minSdk = 24
+        targetSdk = 34
+        versionCode = 1
+        versionName = "1.0"
     }
 
+    sourceSets.main{
+        jniLibs.srcDir 'libs'
+    }
 
     buildTypes {
         release {
@@ -29,14 +33,23 @@ android {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(libs.appcompat)
     implementation(libs.material)
     testImplementation(libs.junit)
+
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    testImplementation libs.junit
+//    implementation 'androidx.appcompat:appcompat:1.7.0'
+
+//    implementation 'com.appsflyer:af-android-sdk:6.9.0'
+//    implementation "com.android.installreferrer:installreferrer:2.2"
     implementation libs.play.services.ads
-//    implementation libs.firebase.bom
-//    implementation libs.firebase.analytics
+//    implementation platform('com.google.firebase:firebase-bom:31.1.0')
+//    implementation 'com.google.firebase:firebase-analytics'
 }
