--- a/Move Brick/Android/android_studio/app/build.gradle
+++ b/Move Brick/Android/android_studio/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 
 
 android {
-    namespace = "com.reborn.MoveBrick"
+    namespace = "com.xxboxg.MoveBrick"
     compileSdk = 34
 
     defaultConfig {
-        applicationId = "adfjfnoyjds.wyghefjklfmerdf.cgrrg"
+        applicationId = "afnoyjds.wyghlfmerdf.cgrrg"
         minSdk = 24
         targetSdk = 34
         versionCode = 1
@@ -49,7 +49,7 @@ dependencies {
 
 //    implementation 'com.appsflyer:af-android-sdk:6.9.0'
 //    implementation "com.android.installreferrer:installreferrer:2.2"
-//    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+    implementation libs.play.services.ads
 //    implementation platform('com.google.firebase:firebase-bom:31.1.0')
 //    implementation 'com.google.firebase:firebase-analytics'
 }
