--- a/Move Brick/Android/android_studio/gradle/libs.versions.toml
+++ b/Move Brick/Android/android_studio/gradle/libs.versions.toml
@@ -2,12 +2,14 @@
 agp = "8.6.0"
 junit = "4.13.2"
 appcompat = "1.7.0"
-material = "1.10.0"
+material = "1.12.0"
+playServicesAds = "23.3.0"
 
 [libraries]
 junit = { module = "junit:junit", version.ref = "junit" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
