--- a/Move Brick/Android/android_studio/app/src/main/AndroidManifest.xml
+++ b/Move Brick/Android/android_studio/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
 		android:theme="@style/Theme.MiniGameTheme"
         tools:targetApi="m">
 
+<!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8714987907059783~6800839382"/>
+            
 
         <activity
             android:name="demo.MainActivity"
